--- a/RNAseq_dimensional_reduction.Rmd
+++ b/RNAseq_dimensional_reduction.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "RNAseq Analysis"
+title: "RNAseq dimensional reduction"
 author: "Jordan Prahl"
 date: "7/7/2020"
 output: html_document
